hphp/hack/test/typecheck/using/using_bad_syntax.php.exp
ERROR: File "using_bad_syntax.php", line 12, characters 9-9:
A left parenthesis `(` is expected here. (Parsing[1002])
